# c360

./: .gitignore  API_DOCUMENTATION.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  package-lock.json  package.json  test-m365-integration.js  wrangler.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/web/: .env.local.example  README.md  env.d.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: LogoutButton.tsx  M365SignInButton.tsx  SignInForm.tsx  TenantBanner.tsx
apps/web/lib/: apiClient.ts  branding.ts  tenant.ts
apps/web/styles/: globals.css
backend/flask-app/: README.md  pyproject.toml
backend/flask-app/app/: __init__.py  extensions.py  models.py  utils.py
backend/flask-app/app/routes/: health.py  tenants.py
backend/flask-app/c360_flask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/flask-app/instance/: c360_dev.db
backend/flask-app/tests/: conftest.py  test_routes.py
catalogs/: README.md
docs/: M365_INTEGRATION.md  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/lib/: api.ts
infra/: README.md
infra/migrations/: 0001_init.sql  0002_domains_invites_logs.sql  0003_compliance_tables.sql  0003_m365_integration.sql  0004_seed_frameworks.sql
services/: README.md
services/api-worker/: .dev.vars.example  README.md  dev-check.mjs  openapi.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
services/queue-consumers/: README.md  package.json  wrangler.toml
(+43 files in other folders)
